<resources>
    <string name="app_name">PanWest</string>
    <string name="default_username">默认测试用户名ID</string>
    <string name="default_userspace">1024G</string>
    <string name="default_spaceaddress">packageA\\packageB\\packageC\\packageD</string>
    <string name="default_appname">PanWest</string>
    <string name="default_spacesize">0G/1024G</string>
    <string name="default_setting">设置</string>
    <string name="default_more">更多</string>
    <string name="default_more_nothing">更多功能正在开发当中\n敬请期待</string>
    <string name="default_my_space">我的网盘</string>
    <string name="default_pan_count">0</string>
    <string name="string_space">空间使用情况:</string>
    <string name="string_address">当前位置:</string>
    <string name="string_my_star">我的收藏</string>
    <string name="string_my_share">我的分享</string>
    <string name="string_my_download">我的下载</string>
    <string name="string_my_delete">回收站</string>
    <string name="string_pan_login">Login</string>
    <string name="string_pan_register_eng">Register</string>
    <string name="string_pan_register">注册账号</string>
    <string name="string_pan_find">找回密码</string>
    <string name="string_pan_login_btn">登录</string>
    <string name="string_input_email">请输入邮箱</string>
    <string name="string_input_id">请输入云盘账号</string>
    <string name="string_input_now_pswd">请输入当前云盘密码</string>
    <string name="string_input_pswd_new">请输入想要修改的云盘密码</string>
    <string name="string_input_pswd">请输入云盘密码</string>
    <string name="string_input_pswd_again">请再次输入云盘密码</string>
    <string name="string_input_pswd_check">请输入验证码</string>
    <string name="string_setting_infomation">账号设置</string>
    <string name="string_setting_reply">问题反馈</string>
    <string name="string_setting_reply_edit_hint">请输入需要反馈的问题:</string>
    <string name="string_setting_account_switch">账号切换</string>
    <string name="string_setting_account_logout">账号登出</string>
    <string name="string_setting_account_change_password">修改密码</string>
    <string name="string_setting_account_get_check_password">获取验证码</string>
    <string name="string_photo">图片</string>
    <string name="string_movie">视频</string>
    <string name="string_music">音频</string>
    <string name="string_rar">压缩包</string>
    <string name="string_file">文件</string>
    <string name="string_star">收藏</string>
    <string name="string_upload">上传文件</string>
    <string name="string_dir">新建文件夹</string>
    <string name="string_selected">已选择</string>
    <string name="string_delete">删除</string>
    <string name="string_download">下载</string>
    <string name="string_rename">重命名</string>
    <string name="string_all_selected">全选</string>
    <string name="string_open">打开</string>
    <string name="string_restore">复原</string>
    <string name="string_delete_yes">删除</string>
</resources>