<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/account_background_shape"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/pan_icon_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/navigation_panwest"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/pan_register_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/pan_icon_img"
                android:text="@string/string_pan_register_eng"
                android:textSize="25sp"
                android:textColor="@color/colorSky"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp">

            <EditText
                android:id="@+id/register_pan_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/account_edittext_shape"
                android:hint="@string/string_input_id"/>

            <EditText
                android:id="@+id/register_pan_pswd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/account_edittext_shape"
                android:layout_marginTop="25dp"
                android:inputType="textPassword"
                android:hint="@string/string_input_pswd"/>

            <EditText
                android:id="@+id/register_pan_pswd_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/account_edittext_shape"
                android:layout_marginTop="25dp"
                android:inputType="textPassword"
                android:hint="@string/string_input_pswd_again"/>
        </LinearLayout>

        <Button
            android:id="@+id/pan_register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/login_button_shape"
            android:layout_gravity="center_horizontal"
            android:text="@string/string_pan_register"
            android:textColor="@android:color/black"/>
    </LinearLayout>
</RelativeLayout>