<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/account_background_shape"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/pan_icon_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/navigation_panwest"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/pan_find_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/pan_icon_img"
                android:text="@string/string_pan_find"
                android:textSize="25sp"
                android:textColor="@color/colorSky"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp">

            <EditText
                android:id="@+id/find_pan_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/account_edittext_shape"
                android:maxLength="16"
                android:hint="@string/string_input_id"/>

            <EditText
                android:id="@+id/find_pan_pswd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/account_edittext_shape"
                android:inputType="textPassword"
                android:maxLength="16"
                android:hint="@string/string_input_pswd_new"/>

            <EditText
                android:id="@+id/find_pan_pswd_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/account_edittext_shape"
                android:layout_marginTop="25dp"
                android:inputType="textPassword"
                android:maxLength="16"
                android:hint="@string/string_input_pswd_again"/>

            <EditText
                android:id="@+id/find_pan_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/account_edittext_shape"
                android:layout_marginTop="25dp"
                android:maxLength="16"
                android:hint="@string/string_input_pswd_check"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:id="@+id/find_pan_check_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/login_button_shape"
                android:layout_gravity="center_horizontal"
                android:text="@string/string_setting_account_get_check_password"
                android:textColor="@android:color/black"
                android:layout_marginRight="10dp"/>

            <Button
                android:id="@+id/find_pan_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/login_button_shape"
                android:layout_gravity="center_horizontal"
                android:text="@string/string_pan_find"
                android:textColor="@android:color/black"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>