<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/account_background_shape"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/password_pan_icon_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/navigation_panwest"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/pan_password_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/password_pan_icon_img"
                android:text="@string/string_setting_account_change_password"
                android:textSize="25sp"
                android:textColor="@color/colorSky"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="20dp">

            <EditText
                android:id="@+id/password_pan_pswd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/account_edittext_shape"
                android:layout_marginTop="25dp"
                android:inputType="textPassword"
                android:maxLength="16"
                android:hint="@string/string_input_pswd"/>

            <EditText
                android:id="@+id/password_pan_pswd_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/account_edittext_shape"
                android:layout_marginTop="25dp"
                android:inputType="textPassword"
                android:maxLength="16"
                android:hint="@string/string_input_pswd_again"/>

            <EditText
                android:id="@+id/password_pan_pswd_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/account_edittext_shape"
                android:layout_marginTop="25dp"
                android:maxLength="8"
                android:hint="@string/string_input_pswd_check"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:id="@+id/password_pan_check_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/login_button_shape"
                android:layout_gravity="center_horizontal"
                android:text="@string/string_setting_account_get_check_password"
                android:textColor="@android:color/black"
                android:layout_marginRight="10dp"/>

            <Button
                android:id="@+id/password_pan_change_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/login_button_shape"
                android:layout_gravity="center_horizontal"
                android:text="@string/string_setting_account_change_password"
                android:textColor="@android:color/black"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>