<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#F5F6FA">

    <com.example.panwest.UI.Widgets.NavigationView
        android:id="@+id/download_Navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:text="@string/string_my_download"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:background="@color/colorSky"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/download_edit"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/space_edit"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:layout_centerVertical="true"/>

        <ImageView
            android:id="@+id/download_filtrate"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/space_filtrate"
            android:layout_toStartOf="@id/download_edit"
            android:layout_marginEnd="10dp"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <com.example.panwest.UI.Widgets.searchEdittextView
        android:id="@+id/download_searchEdittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorSky"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/download_fileList"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <LinearLayout
        android:id="@+id/download_bottom_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/download_edit_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="15dp"
            android:textSize="18sp"
            android:text="@string/string_selected"
            android:textColor="@color/colorSky"/>

        <TextView
            android:id="@+id/download_edit_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:textSize="18sp"
            android:text="@string/default_pan_count"
            android:textColor="@color/colorSky"/>

        <Button
            android:id="@+id/download_edit_all"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_shape"
            android:text="@string/string_all_selected"
            android:layout_gravity="right"
            tools:ignore="RtlHardcoded"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp"/>

        <Button
            android:id="@+id/download_edit_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_shape"
            android:text="@string/string_delete"
            android:layout_gravity="right"
            tools:ignore="RtlHardcoded"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp"/>

    </LinearLayout>
</LinearLayout>